// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stil MI_KA 1`] = `
Object {
  "filter": Array [
    "has",
    "MI_KA",
  ],
  "id": "MI_KA",
  "interactive": true,
  "paint": Object {
    "fill-color": "#FFFF00",
    "fill-outline-color": "#FF0000",
  },
  "source": "sqrt42",
  "source-layer": "sqrt42",
  "type": "fill",
}
`;

exports[`stil NA 1`] = `
Object {
  "filter": Array [
    "has",
    "NA_T",
  ],
  "id": "NA_T",
  "interactive": true,
  "paint": Object {
    "fill-color": "#FFFF00",
    "fill-outline-color": "#FF0000",
  },
  "source": "sqrt42",
  "source-layer": "sqrt42",
  "type": "fill",
}
`;
